# repo-contextr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/contextr/: cli.py  main.py
src/contextr/commands/: package.py  token_commands.py
src/contextr/config/: __init__.py  languages.py  settings.py  toml_loader.py
src/contextr/discovery/: __init__.py  file_discovery.py
src/contextr/formatters/: __init__.py  report_formatter.py  token_tree_formatter.py
src/contextr/git/: __init__.py  git_operations.py
src/contextr/output/: __init__.py  tree_formatter.py
src/contextr/processing/: __init__.py  file_reader.py
src/contextr/statistics/: __init__.py  file_stats.py  token_counter.py
src/contextr/utils/: helpers.py
src/tests/: test_recent.py  test_toml.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_file_discovery.py  test_file_reader.py  test_file_stats.py  test_git_operations.py  test_statistics.py  test_token_counter.py  test_tree_formatter.py
