[project]
name = "repo-contextr"
version = "0.1.0"
description = "A CLI tool that analyzes git repositories and packages their content for sharing with LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.17.4",
    "gitpython>=3.1.0",
]

[project.scripts]
contextr = "contextr.cli:app"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.17.1",
    "pytest>=8.4.2",
]
